--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,3 +7,28 @@
     background-repeat: no-repeat;
     background-position: center;
 }
+
+
+.section-search-form-btn {
+    display: grid;
+    grid-template-columns: 80% 20%;
+    padding-top: 25px;
+    gap: 15px;
+    width: 85%;
+    justify-content: center;
+}
+
+.section-search-input {
+    height: 30px;
+    padding: 10px;
+}
+
+.section-search-btn {
+    background-color: #00e4c6;
+    color: white;
+    font-size: 16px;
+    border: none;
+    border-radius: 2px;
+    height: 30px;
+    width: 40px;
+}
