--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,15 +10,13 @@
 
 .section-search-form-btn {
     display: grid;
-    grid-template-columns: 80% 20%;
+    grid-template-columns: 4fr 1fr;
     padding-top: 25px;
     gap: 15px;
-    width: 85%;
-    justify-content: center;
 }
 
 .section-search-input {
-    height: 30px;
+    height: 10px;
     padding: 10px;
 }
 
@@ -28,8 +26,6 @@
     font-size: 16px;
     border: none;
     border-radius: 2px;
-    height: 30px;
-    width: 40px;
 }
 
 
@@ -41,8 +37,7 @@
 .character__list {
     list-style: none;
     display: flex;
-    gap: 1rem;
-    /* Espacio entre cromos */
+    gap: 0.5rem;
     padding: 0;
     margin: 0;
     justify-content: center;
