--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -28,7 +28,6 @@
     border-radius: 2px;
 }
 
-
 .character__title {
     text-align: center;
     font-size: 2rem;
@@ -43,7 +42,6 @@
     justify-content: center;
 }
 
-
 .character__card {
 
     display: flex;
@@ -56,7 +54,7 @@
     height: 180px;
     border: 2px solid #ccc;
     border-radius: 10px;
-    overflow: hidden;
+
     padding: 1rem;
 
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -65,7 +63,10 @@
 }
 
 .character__img {
-    width: 100%;
+    width: auto;
+    height: auto;
+    overflow: hidden;
+
 }
 
 .character__name {
