--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -35,11 +35,11 @@
 
 .character__list {
     list-style: none;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     gap: 0.5rem;
-    padding: 0;
-    margin: 0;
-    justify-content: center;
+    margin: auto;
+    max-width: 950px;
 }
 
 .character__card {
