--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,15 @@
     grid-template-columns: 4fr 1fr;
     padding-top: 25px;
     gap: 15px;
+    transform: translateY(-50%);
+    z-index: 2;
+    background-color: white;
+    width: 70%;
+    align-items: center;
+    margin: 0 auto;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    background-color: #f9f9f9;
+
 }
 
 .section-search-input {
@@ -36,7 +45,7 @@
 .character__list {
     list-style: none;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 0.5rem;
     margin: auto;
     max-width: 950px;
@@ -47,30 +56,30 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: center;
+    justify-content: center;
 
-
-    width: 200px;
-    height: 180px;
     border: 2px solid #ccc;
     border-radius: 10px;
-
-    padding: 1rem;
+    height: 500px;
 
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     background-color: #f9f9f9;
 
+    overflow: hidden;
 }
 
 .character__img {
-    width: auto;
-    height: auto;
-    overflow: hidden;
+    object-fit: cover;
 
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
 .character__name {
     font-size: 1.5rem;
     margin: 0;
     padding-top: 0.5rem;
+    text-align: center;
+
 }
