--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -45,10 +45,10 @@
 .character__list {
     list-style: none;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 0.5rem;
     margin: auto;
-    max-width: 950px;
+    max-width: 1200px;
 }
 
 .character__card {
@@ -82,4 +82,12 @@
     padding-top: 0.5rem;
     text-align: center;
 
+}
+
+.character__heart {
+    cursor: pointer;
+}
+
+.character__heart:hover {
+    color: red;
 }
