Add favorite class

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -68,6 +68,25 @@
     overflow: hidden;
 }
 
+.character__favorite {
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    border: 2px solid #AA336A;
+    border-radius: 10px;
+    height: 500px;
+
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    background-color: pink;
+
+    overflow: hidden;
+
+
+}
+
 .character__img {
     object-fit: cover;
 
