--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -37,7 +37,14 @@
     border-radius: 2px;
 }
 
-.character__title {
+.main {
+
+    display: grid;
+    grid-template-columns: 70% 40%;
+
+}
+
+.characters__title {
     text-align: center;
     font-size: 2rem;
 }
@@ -68,7 +75,7 @@
     overflow: hidden;
 }
 
-.favorite {
+.favourite {
 
     display: flex;
     flex-direction: column;
@@ -109,4 +116,15 @@
 
 .character__heart:hover {
     color: red;
+}
+
+
+.heartClicked {
+    color: red;
+}
+
+
+.charactersFavourite__title {
+    margin-left: 30px;
+    font-size: 2rem;
 }
