--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -38,9 +38,8 @@
 }
 
 .main {
-
     display: grid;
-    grid-template-columns: 70% 40%;
+    grid-template-columns: 70% 30%;
 
 }
 
@@ -123,6 +122,12 @@
     color: red;
 }
 
+
+.charactersFavourite_section {
+
+    background-color: #fbe8f1;
+
+}
 
 .charactersFavourite__title {
     margin-left: 30px;
