--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,12 +1,10 @@
 .header__image {
-
     height: 50vh;
     background-image: url("../images/castillo-de-disney.jpeg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
-
 
 .section-search-form-btn {
     display: grid;
@@ -40,7 +38,6 @@
 .main {
     display: grid;
     grid-template-columns: 70% 30%;
-
 }
 
 .characters__title {
@@ -58,7 +55,6 @@
 }
 
 .character__card {
-
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -75,7 +71,6 @@
 }
 
 .favourite {
-
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -89,7 +84,6 @@
     background-color: pink;
 
     overflow: hidden;
-
 }
 
 .character__img {
@@ -105,7 +99,6 @@
     margin: 0;
     padding-top: 0.5rem;
     text-align: center;
-
 }
 
 .character__heart {
@@ -123,12 +116,22 @@
 
 
 .charactersFavourite_section {
-
     background-color: #fbe8f1;
-
 }
 
 .charactersFavourite__title {
     margin-left: 30px;
     font-size: 2rem;
+}
+
+
+// Pasar el fondo a blanco y ocultar el corazón en la lista de favoritos */
+
+.js_favouriteCharacterUl .favourite {
+    background-color: white;
+    border-color: #ccc;
+}
+
+.js_favouriteCharacterUl .favourite .js_characterHeart {
+    display: none;
 }
