--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -36,8 +36,14 @@
 }
 
 .main {
+    background: linear-gradient(to right, pink, white, );
+
+}
+
+.characters__section {
     display: grid;
     grid-template-columns: 70% 30%;
+
 }
 
 .characters__title {
@@ -69,6 +75,9 @@
 
     overflow: hidden;
 }
+
+
+// Clase favourite para el <li>
 
 .favourite {
     display: flex;
@@ -116,7 +125,10 @@
 
 
 .charactersFavourite_section {
-    background-color: #fbe8f1;
+    background-color: white;
+    border: 2px solid pink;
+    border-radius: 10px;
+    margin-inline: 50px;
 }
 
 .charactersFavourite__title {
