--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -41,7 +41,10 @@
 }
 
 .main {
-    background: linear-gradient(to right, pink, white, );
+    background: linear-gradient(to right, pink, white);
+    height: 100%;
+    width: 100%;
+
 
 }
 
