--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -51,6 +51,7 @@
     background: linear-gradient(to right, pink, white);
     height: 100%;
     width: 100%;
+    font-family: 'Roboto', sans-serif;
 }
 
 .characters__section {
@@ -115,9 +116,9 @@
 }
 
 .character__name {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     margin: 0;
-    padding-top: 0.5rem;
+    padding: 0.5rem;
     text-align: center;
 }
 
@@ -129,22 +130,22 @@
     color: red;
 }
 
-
 .heartClicked {
     color: red;
 }
-
 
 .charactersFavourite_section {
     background-color: white;
     border: 2px solid pink;
     border-radius: 10px;
+
+    padding: 0.5rem;
     margin-inline: 50px;
 }
 
 .charactersFavourite__title {
-    margin-left: 30px;
     font-size: 2rem;
+    text-align: center;
 }
 
 
