--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -74,12 +74,12 @@
     max-width: 1200px;
 }
 
-.character__card {
+.characters__card {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
+    width: 100%;
     border: 2px solid #ccc;
     border-radius: 10px;
     height: 500px;
@@ -133,6 +133,25 @@
     margin-inline: 50px;
 }
 
+.charactersFavourite_list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.charactersFavourite__card {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    width: 100%;
+
+}
+
 .charactersFavourite__title {
     font-size: 2rem;
     text-align: center;
@@ -155,7 +174,7 @@
 
 .js_trash {
     cursor: pointer;
-    margin-top: 10px;
+    margin-right: 20px;
 }
 
 .js_trash:hover {
