--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -125,7 +125,7 @@
     color: red;
 }
 
-.charactersFavourite_section {
+.charactersFavourite__section {
     background-color: white;
     border: 2px solid pink;
     border-radius: 10px;
@@ -150,13 +150,41 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     width: 100%;
-
 }
 
 .charactersFavourite__title {
     font-size: 2rem;
     text-align: center;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
+}
+
+
+.charactersFavourite__text {
+    margin: auto;
+    width: 70%;
+    text-align: center;
+    margin-bottom: 25px;
+
+}
+
+.charactersFavourite__delete-btn {
+    background-color: #AA336A;
+    height: 2rem;
+    color: white;
+    font-size: 20px;
+    border: 2px solid #AA336A;
+    border-radius: 2px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: center;
+    margin: auto;
+}
+
+.charactersFavourite__image {
+    width: 75%;
+    display: flex;
+    margin: auto;
+
 }
 
 // Pasar el fondo a blanco y ocultar el corazón en la lista de favoritos 
