--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -58,6 +58,7 @@
 .characters__section {
     display: grid;
     grid-template-columns: 70% 30%;
+    margin-bottom: 50px;
 }
 
 .characters__title {
@@ -132,6 +133,7 @@
 
     padding: 0.5rem;
     margin-inline: 50px;
+
 }
 
 .charactersFavourite_list {
@@ -155,7 +157,6 @@
     text-align: center;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
 }
-
 
 .charactersFavourite__text {
     margin: auto;
@@ -219,12 +220,16 @@
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
 
-    position: fixed;
+    position: sticky;
     bottom: 0;
-    left: 0;
     width: 100%;
+    height: 40px;
     text-align: center;
 
     box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
