--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -66,12 +66,17 @@
     border-radius: 10px;
     margin-left: 50px;
     padding-bottom: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.Allcharacters__imageMickey {
-    position: absolute;
-    height: 13%;
-    transform: translate(850px, -25px);
+.Allcharacters__header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 25px;
+    margin-bottom: -15px;
 }
 
 .Allcharacters__title {
@@ -80,13 +85,18 @@
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
 }
 
+.Allcharacters__imageMickey {
+    height: 7rem;
+}
+
 .Allcharacters__list {
     list-style: none;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 0.5rem;
-    margin: auto;
-    max-width: 1200px;
+
+    max-width: 1100px;
+    margin-left: -50px;
 }
 
 .Allcharacters__card {
