--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -48,6 +48,14 @@
     color: #AA336A;
 }
 
+.search__characterNotFound {
+    margin-top: 100px;
+    width: 90%;
+    font-size: 1.5rem;
+    display: flex;
+    text-align: center;
+}
+
 .main {
     background: linear-gradient(to right, pink, white);
     height: 100%;
@@ -181,12 +189,20 @@
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
 }
 
+.charactersFavourite_counter {
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.charactersFavourite_counterheart {
+    margin-right: 10px;
+}
+
 .charactersFavourite__text {
     margin: auto;
     width: 90%;
     text-align: center;
     margin-bottom: 25px;
-
 }
 
 .charactersFavourite__delete-btn {
