--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -112,7 +112,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    width: 270px;
     border: 2px solid #ccc;
     border-radius: 10px;
     height: 500px;
