--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -39,7 +39,7 @@
     color: white;
     font-size: 20px;
     border: 2px solid #AA336A;
-    border-radius: 2px;
+    border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
@@ -69,7 +69,7 @@
     margin-bottom: 50px;
 }
 
-.Allcharacters_section {
+.Allcharacters__section {
     border: 2px solid #AA336A;
     border-radius: 10px;
     margin-left: 50px;
@@ -178,10 +178,9 @@
 
     padding: 0.5rem;
     margin-inline: 50px;
-
 }
 
-.charactersFavourite_list {
+.charactersFavourite__list {
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -208,12 +207,12 @@
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
 }
 
-.charactersFavourite_counter {
+.charactersFavourite__counter {
     text-align: center;
     margin-bottom: 50px;
 }
 
-.charactersFavourite_counterheart {
+.charactersFavourite__counterheart {
     margin-right: 10px;
 }
 
@@ -230,7 +229,7 @@
     color: white;
     font-size: 20px;
     border: 2px solid #AA336A;
-    border-radius: 2px;
+    border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     display: flex;
     justify-content: center;
@@ -246,7 +245,6 @@
     width: 75%;
     display: flex;
     margin: auto;
-
 }
 
 // Pasar el fondo a blanco y ocultar el corazón en la lista de favoritos 
