Create partials html

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,4 @@
-.header__image {
+.header {
     height: 50vh;
     background-image: url("../images/castillo-de-disney.jpeg");
     background-size: cover;
