Fix styles with reset

--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,62 +1,62 @@
 <main class="main">
 
-    <form class="search__form">
+  <form class="search__form">
 
-      <input class="js_inputSearch search__input" type="text" name="submit-search" id="submit-search"
-        placeholder="Ejemplo: Mickey Mouse">
-      <input class="js_btnSearch search__btn" type="submit" value="Buscar">
+    <input class="js_inputSearch search__input" type="text" name="submit-search" id="submit-search"
+      placeholder="Ejemplo: Mickey Mouse">
+    <input class="js_btnSearch search__btn" type="submit" value="Buscar">
 
-    </form>
+  </form>
 
 
-    <section class="bothcharacters__sections">
+  <section class="bothcharacters__sections">
 
-      <div class="Allcharacters__section">
+    <article class="Allcharacters__section">
 
-        <div class="Allcharacters__header">
+      <div class="Allcharacters__header">
 
-          <h1 class="Allcharacters__title">
-            Listado de personajes de Disney
-          </h1>
+        <h1 class="Allcharacters__title">
+          Listado de personajes de Disney
+        </h1>
 
-          <img class="Allcharacters__imageMickey" src="../images/mickey_mouse_section characters.png"
-            alt="Imagen de Mickey Mouse tumbado en sección de personajes de Disney">
-
-        </div>
-
-        <p class="js_characterNotFound"></p>
-
-        <ul class="js_characterUl Allcharacters__list">
-
-        </ul>
-
+        <img class="Allcharacters__imageMickey" src="../images/mickey_mouse_section characters.png"
+          alt="Imagen de Mickey Mouse tumbado en sección de personajes de Disney">
 
       </div>
 
-      <div class="charactersFavourite__section">
+      <p class="js_characterNotFound"></p>
 
-        <h2 class="charactersFavourite__title">
-          Tus personajes favoritos
-        </h2>
+      <ul class="js_characterUl Allcharacters__list">
 
-        <p class="js_favouritesCounter charactersFavourite__counter" style="display: none"></p>
+      </ul>
 
-        <ul class="js_favouriteCharacterUl charactersFavourite__list">
 
-        </ul>
+    </article>
 
-        <p class="js_descriptionTextFavourites charactersFavourite__text">Marca tus favoritos con el corazón
-          <i class="fa-solid fa-heart" style="color: red;"></i> y pasarán a formar parte de este listado
-        </p>
+    <article class="charactersFavourite__section">
 
-        <img class="js_imageStitchFavourites charactersFavourite__image" src="../images/stitch section favourites.png"
-          alt="Stitch con corazones en sección de personajes favoritos">
+      <h2 class="charactersFavourite__title">
+        Tus personajes favoritos
+      </h2>
 
-        <button class="js_deleteAllFavouritesBtn charactersFavourite__delete-btn" style="display: none">Borrar todos los
-          favoritos</button>
+      <p class="js_favouritesCounter charactersFavourite__counter" style="display: none"></p>
 
-      </div>
+      <ul class="js_favouriteCharacterUl charactersFavourite__list">
 
-    </section>
+      </ul>
 
-  </main>
+      <p class="js_descriptionTextFavourites charactersFavourite__text">Marca tus favoritos con el corazón
+        <i class="fa-solid fa-heart" style="color: red;"></i> y pasarán a formar parte de este listado
+      </p>
+
+      <img class="js_imageStitchFavourites charactersFavourite__image" src="../images/stitch section favourites.png"
+        alt="Stitch con corazones en sección de personajes favoritos">
+
+      <button class="js_deleteAllFavouritesBtn charactersFavourite__delete-btn" style="display: none">Borrar todos los
+        favoritos</button>
+
+    </article>
+
+  </section>
+
+</main>
