Add main layout

--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,15 +1,15 @@
 <main class="main">
 
-  <form class="search__form">
+  <form class="searchSection">
 
-    <input class="js_inputSearch search__input" type="text" name="submit-search" id="submit-search"
+    <input class="js_inputSearch searchSection__input" type="text" name="submit-search" id="submit-search"
       placeholder="Ejemplo: Mickey Mouse">
-    <input class="js_btnSearch search__btn" type="submit" value="Buscar">
+    <input class="js_btnSearch searchSection__btn" type="submit" value="Buscar">
 
   </form>
 
 
-  <section class="bothcharacters__sections">
+  <section class="main__structure">
 
     <article class="Allcharacters__section">
 
