--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -11,22 +11,22 @@
 
   <section class="main__structure">
 
-    <article class="Allcharacters__section">
+    <article class="allCharactersSection">
 
-      <div class="Allcharacters__header">
+      <div class="allCharactersSection__header">
 
-        <h1 class="Allcharacters__title">
+        <h1 class="allCharactersSection__title">
           Listado de personajes de Disney
         </h1>
 
-        <img class="Allcharacters__imageMickey" src="../images/mickey_mouse_section characters.png"
+        <img class="allCharactersSection__imageMickey" src="../images/mickey_mouse_section characters.png"
           alt="Imagen de Mickey Mouse tumbado en sección de personajes de Disney">
 
       </div>
 
       <p class="js_characterNotFound"></p>
 
-      <ul class="js_characterUl Allcharacters__list">
+      <ul class="js_characterUl allCharactersSection__list">
 
       </ul>
 
