--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,69 +2,11 @@
 @import 'core/variables';
 @import 'layout/header';
 @import 'layout/searchSection';
-@import 'layout/main';
+@import 'layout/mainStructure';
+@import 'layout/allCharactersSection';
 
 
 
-
-.Allcharacters__section {
-    border: 2px solid #AA336A;
-    border-radius: 10px;
-    margin-left: 50px;
-    padding-bottom: 50px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.Allcharacters__header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 25px;
-    margin-bottom: 15px;
-}
-
-.Allcharacters__title {
-    text-align: center;
-    font-size: 2rem;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
-}
-
-.Allcharacters__imageMickey {
-    height: 7rem;
-}
-
-.Allcharacters__list {
-    list-style: none;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 0.5rem;
-
-    max-width: 1100px;
-}
-
-.Allcharacters__card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 270px;
-    border: 2px solid #ccc;
-    border-radius: 16px;
-    height: 500px;
-
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
-    transition: transform 0.2s ease, box-shadow 0.2s ease;
-    background-color: white;
-
-    overflow: hidden;
-}
-
-.Allcharacters__card:hover {
-    transform: translateY(-2px);
-    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
-}
 
 
 // Clase favourite para el <li>
