--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,7 +4,7 @@
 @import 'layout/searchSection';
 @import 'layout/mainStructure';
 @import 'layout/allCharactersSection';
-
+@import 'layout/footer';
 
 
 
@@ -151,24 +151,4 @@
     color: red;
     transform: rotate(-15deg) scale(1.1);
     transition: transform 0.3s ease, color 0.3s ease;
-}
-
-.footer {
-    background-color: #AA336A;
-    color: white;
-    font-family: 'Roboto', sans-serif;
-    font-weight: bold;
-
-    position: sticky;
-    bottom: 0;
-    width: 100%;
-    height: 40px;
-    text-align: center;
-
-    box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
-    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
