--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -33,15 +33,15 @@
 
     </article>
 
-    <article class="charactersFavourite__section">
+    <article class="charactersFavouriteSection">
 
-      <h2 class="charactersFavourite__title">
+      <h2 class="charactersFavouriteSection__title">
         Tus personajes favoritos
       </h2>
 
       <p class="js_favouritesCounter charactersFavourite__counter" style="display: none"></p>
 
-      <ul class="js_favouriteCharacterUl charactersFavourite__list">
+      <ul class="js_favouriteCharacterUl charactersFavouriteSection__list">
 
       </ul>
 
@@ -49,10 +49,11 @@
         <i class="fa-solid fa-heart" style="color: red;"></i> y pasarán a formar parte de este listado
       </p>
 
-      <img class="js_imageStitchFavourites charactersFavourite__image" src="../images/stitch section favourites.png"
-        alt="Stitch con corazones en sección de personajes favoritos">
+      <img class="js_imageStitchFavourites charactersFavouriteSection__image"
+        src="../images/stitch section favourites.png" alt="Stitch con corazones en sección de personajes favoritos">
 
-      <button class="js_deleteAllFavouritesBtn charactersFavourite__delete-btn" style="display: none">Borrar todos los
+      <button class="js_deleteAllFavouritesBtn charactersFavouriteSection__delete-btn" style="display: none">Borrar
+        todos los
         favoritos</button>
 
     </article>
