--- a/src/scss/layout/_allCharactersSection.scss
+++ b/src/scss/layout/_allCharactersSection.scss
@@ -58,3 +58,45 @@
     }
 
 }
+
+
+// Clase favourite para el <li>
+
+.favourite {
+    border: 2px solid #AA336A;
+    background-color: rgb(230, 138, 151);
+}
+
+
+.character__img {
+    object-fit: cover;
+    border-radius: 16px;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.character__name {
+    font-size: 1.25rem;
+    padding: 0.5rem;
+    text-align: center;
+}
+
+.character__heart {
+    cursor: pointer;
+    transition: color 0.3s ease, transform 0.2s ease;
+}
+
+.character__heart:hover {
+    color: red;
+    transform: scale(1.2);
+}
+
+.heartClicked {
+    color: red;
+}
+
+.heartClicked:hover {
+    cursor: pointer;
+    transform: scale(1.2);
+}
