--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,151 +4,5 @@
 @import 'layout/searchSection';
 @import 'layout/mainStructure';
 @import 'layout/allCharactersSection';
+@import 'layout/charactersFavouriteSection';
 @import 'layout/footer';
-
-
-
-
-// Clase favourite para el <li>
-
-.favourite {
-    border: 2px solid #AA336A;
-    background-color: rgb(230, 138, 151);
-}
-
-.character__img {
-    object-fit: cover;
-    border-radius: 16px;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
-
-.character__name {
-    font-size: 1.25rem;
-    padding: 0.5rem;
-    text-align: center;
-}
-
-.character__heart {
-    cursor: pointer;
-    transition: color 0.3s ease, transform 0.2s ease;
-}
-
-.character__heart:hover {
-    color: red;
-    transform: scale(1.2);
-}
-
-.heartClicked {
-    color: red;
-}
-
-.heartClicked:hover {
-    cursor: pointer;
-    transform: scale(1.2);
-}
-
-.charactersFavourite__section {
-    background-color: white;
-    border: 2px solid pink;
-    border-radius: 10px;
-
-    padding: 2.5rem;
-    margin-inline: 50px;
-}
-
-.charactersFavourite__list {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-.charactersFavourite__card {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-}
-
-.charactersFavourite__card:hover {
-    transform: translateY(-2px);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-}
-
-.charactersFavourite__title {
-    font-size: 2rem;
-    text-align: center;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
-    margin-top: 25px;
-}
-
-.charactersFavourite__counter {
-    text-align: center;
-    margin-top: 25px;
-    margin-bottom: 50px;
-}
-
-.charactersFavourite__counterheart {
-    margin-right: 10px;
-}
-
-.charactersFavourite__text {
-    margin: auto;
-    width: 90%;
-    text-align: center;
-    margin-block: 25px;
-}
-
-.charactersFavourite__delete-btn {
-    background-color: #AA336A;
-    height: 2.5rem;
-    width: 17rem;
-    color: white;
-    font-size: 20px;
-    border: 2px solid #AA336A;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    display: flex;
-    justify-content: center;
-    margin: auto;
-    margin-top: 50px;
-}
-
-.charactersFavourite__delete-btn:hover {
-    background-color: pink;
-    color: #AA336A;
-}
-
-.charactersFavourite__image {
-    width: 75%;
-    display: flex;
-    margin: auto;
-}
-
-// Pasar el fondo a blanco y ocultar el corazón en la lista de favoritos 
-
-.js_favouriteCharacterUl .favourite {
-    background-color: white;
-    border-color: #ccc;
-
-}
-
-.js_favouriteCharacterUl .favourite .js_characterHeart {
-    display: none;
-}
-
-// Icono de basura para la sección de favoritos
-
-.js_trash {
-    cursor: pointer;
-    margin-right: 20px;
-}
-
-.js_trash:hover {
-    color: red;
-    transform: rotate(-15deg) scale(1.1);
-    transition: transform 0.3s ease, color 0.3s ease;
-}
