--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #AA336A;
+    background-color: $color_principal;
     color: white;
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
