--- a/src/scss/layout/_mainStructure.scss
+++ b/src/scss/layout/_mainStructure.scss
@@ -1,5 +1,5 @@
 .main {
-    background: linear-gradient(to right, pink, white);
+    background: linear-gradient(to right, $color_secondary, white);
     height: 100%;
     width: 100%;
     font-family: 'Roboto', sans-serif;
