--- a/src/scss/layout/_charactersFavouriteSection.scss
+++ b/src/scss/layout/_charactersFavouriteSection.scss
@@ -1,6 +1,6 @@
 .charactersFavouriteSection {
     background-color: white;
-    border: 2px solid pink;
+    border: 2px solid $color_secondary;
     border-radius: 10px;
 
     padding: 2.5rem;
@@ -51,12 +51,12 @@
     }
 
     &__delete-btn {
-        background-color: #AA336A;
+        background-color: $color_principal;
         height: 2.5rem;
         width: 17rem;
         color: white;
         font-size: 20px;
-        border: 2px solid #AA336A;
+        border: 2px solid $color_principal;
         border-radius: 8px;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         display: flex;
@@ -66,8 +66,8 @@
     }
 
     &_delete-btn:hover {
-        background-color: pink;
-        color: #AA336A;
+        background-color: $color_secondary;
+        color: $color_principal;
     }
 
     &__image {
