Fix name styles in charactersFavouriteSection html

--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -39,13 +39,14 @@
         Tus personajes favoritos
       </h2>
 
-      <p class="js_favouritesCounter charactersFavourite__counter" style="display: none"></p>
+      <p class="js_favouritesCounter charactersFavouriteSection__counter" style="display: none"></p>
 
       <ul class="js_favouriteCharacterUl charactersFavouriteSection__list">
 
       </ul>
 
-      <p class="js_descriptionTextFavourites charactersFavourite__text">Marca tus favoritos con el corazón
+      <p class="js_descriptionTextFavourites charactersFavouriteSection__descriptiontext">Marca tus favoritos con el
+        corazón
         <i class="fa-solid fa-heart" style="color: red;"></i> y pasarán a formar parte de este listado
       </p>
 
