--- a/src/scss/layout/_charactersFavouriteSection.scss
+++ b/src/scss/layout/_charactersFavouriteSection.scss
@@ -65,7 +65,7 @@
         margin-top: 50px;
     }
 
-    &_delete-btn:hover {
+    &__delete-btn:hover {
         background-color: $color_secondary;
         color: $color_principal;
     }
